# nesemu

./: Cargo.toml  README.md
src/: addressing_mode.rs  bus.rs  cpu.rs  instruction.rs  main.rs  op_code.rs
src/core/: Cargo.toml  README.md
src/core/src/: lib.rs
src/cpu/: Cargo.toml  README.md
src/cpu/src/: addressing_mode.rs  cpu.rs  instruction.rs  lib.rs  op_code.rs
src/cpu/tests/: op_code_test.rs
src/cpu/tests/common/: fake_bus.rs  mod.rs
src/gui/: .gitignore  Cargo.toml  README.md  index.html  log.txt  mod.rs
src/gui/assets/: worker.js
src/gui/src/: app.rs  lib.rs  main.rs  native.rs  web.rs  whatever the fuck i was doing
src/nes/: Cargo.toml  README.md
src/nes/src/: bus.rs  lib.rs  main.rs  memory.rs  rom_loader.rs
